refactor: Remove supabase CLI from dependencies
- Use npx supabase for CLI commands (separation of concerns)
- Supabase CLI is a dev tool, not a runtime dependency
- Fixes EAS build failure due to GitHub timeout during CLI download
- All db:* scripts now use npx supabase

--- a/package.json
+++ b/package.json
@@ -32,15 +32,15 @@
     "type-check": "turbo run type-check",
     "clean": "turbo run clean && rm -rf node_modules .turbo",
     "setup:env": "node scripts/setup-env.mjs",
-    "db:start": "supabase start",
-    "db:stop": "supabase stop",
-    "db:reset": "supabase db reset",
-    "db:migrate": "supabase db push",
-    "db:migrate:new": "supabase migration new",
+    "db:start": "npx supabase start",
+    "db:stop": "npx supabase stop",
+    "db:reset": "npx supabase db reset",
+    "db:migrate": "npx supabase db push",
+    "db:migrate:new": "npx supabase migration new",
     "db:generate-types": "./scripts/generate-db-types.sh remote",
     "db:generate-types:local": "./scripts/generate-db-types.sh local",
-    "db:diff": "supabase db diff",
-    "db:status": "supabase status",
+    "db:diff": "npx supabase db diff",
+    "db:status": "npx supabase status",
     "db:test:rls": "supabase/tests/run_rls_tests.sh local",
     "db:test:rls:staging": "supabase/tests/run_rls_tests.sh staging",
     "db:test:storage": "supabase/tests/run_rls_tests.sh local storage",
@@ -78,7 +78,6 @@
     "openai": "^6.14.0",
     "prettier": "^3.7.4",
     "stripe": "^20.1.0",
-    "supabase": "^2.67.2",
     "tsx": "^4.21.0",
     "turbo": "^2.6.3",
     "typescript": "~5.9.3",
