--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -74,6 +74,7 @@
     "expo-secure-store": "~15.0.8",
     "expo-splash-screen": "~31.0.12",
     "expo-status-bar": "~3.0.9",
+    "expo-updates": "~29.0.15",
     "i18next": "^25.7.3",
     "pako": "^2.1.0",
     "posthog-react-native": "^4.16.2",
