--- a/apps/mobile/eas.json
+++ b/apps/mobile/eas.json
@@ -43,7 +43,8 @@
         "APP_ENV": "production",
         "SENTRY_ORG": "${SENTRY_ORG}",
         "SENTRY_PROJECT": "${SENTRY_PROJECT}",
-        "SENTRY_AUTH_TOKEN": "${SENTRY_AUTH_TOKEN}"
+        "SENTRY_AUTH_TOKEN": "${SENTRY_AUTH_TOKEN}",
+        "SENTRY_ALLOW_FAILURE": "true"
       }
     }
   },
