--- a/apps/mobile/eas.json
+++ b/apps/mobile/eas.json
@@ -44,7 +44,7 @@
         "SENTRY_ORG": "${SENTRY_ORG}",
         "SENTRY_PROJECT": "${SENTRY_PROJECT}",
         "SENTRY_AUTH_TOKEN": "${SENTRY_AUTH_TOKEN}",
-        "SENTRY_ALLOW_FAILURE": "true"
+        "SENTRY_URL": "https://de.sentry.io/"
       }
     }
   },
