--- a/apps/mobile/eas.json
+++ b/apps/mobile/eas.json
@@ -44,7 +44,8 @@
         "SENTRY_ORG": "${SENTRY_ORG}",
         "SENTRY_PROJECT": "${SENTRY_PROJECT}",
         "SENTRY_AUTH_TOKEN": "${SENTRY_AUTH_TOKEN}",
-        "SENTRY_URL": "https://de.sentry.io/"
+        "SENTRY_URL": "https://de.sentry.io/",
+        "SENTRY_DISABLE_AUTO_UPLOAD": "true"
       }
     }
   },
