--- a/apps/mobile/ios/sentry.properties
+++ b/apps/mobile/ios/sentry.properties
@@ -1,3 +1,4 @@
-defaults.url=https://de.sentry.io/
+defaults.url=https://sentry.io/
 defaults.org=travelmatch-2p
 defaults.project=react-native
+# Using SENTRY_AUTH_TOKEN environment variable
