--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "lint-staged": "^16.2.7",
     "openai": "^6.14.0",
     "prettier": "^3.7.4",
+    "react-test-renderer": "19.2.3",
     "stripe": "^20.1.0",
     "tsx": "^4.21.0",
     "turbo": "^2.6.3",
@@ -101,9 +102,10 @@
   },
   "pnpm": {
     "overrides": {
-      "react": "19.1.0",
-      "react-dom": "19.1.0",
-      "react-native": "0.81.5"
+      "react": "19.2.3",
+      "react-dom": "19.2.3",
+      "react-native": "0.81.5",
+      "react-test-renderer": "19.2.3"
     }
   }
 }
