--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -47,7 +47,7 @@
     "@react-navigation/native": "^7.1.26",
     "@react-navigation/stack": "^7.6.13",
     "@rnmapbox/maps": "^10.2.10",
-    "@sentry/react-native": "~7.8.0",
+    "@sentry/react-native": "~7.2.0",
     "@shopify/flash-list": "^2.2.0",
     "@supabase/supabase-js": "^2.88.0",
     "@travelmatch/design-system": "workspace:*",
@@ -78,11 +78,11 @@
     "i18next": "^25.7.3",
     "pako": "^2.1.0",
     "posthog-react-native": "^4.16.2",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-hook-form": "^7.68.0",
     "react-i18next": "^16.5.0",
-    "react-native": "0.83.0",
+    "react-native": "0.81.5",
     "react-native-device-info": "^15.0.1",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-mmkv": "^4.1.0",
@@ -100,11 +100,12 @@
     "@babel/plugin-transform-export-namespace-from": "^7.27.1",
     "@eslint/js": "^9.39.2",
     "@storybook/react-native": "^10.1.1",
+    "storybook": "^10.1.10",
     "@testing-library/react-native": "^13.3.3",
     "@types/jest": "^29.5.14",
     "@types/pako": "^2.0.4",
     "@types/prop-types": "^15.7.15",
-    "@types/react": "~19.1.0",
+    "@types/react": "~19.1.10",
     "@types/react-test-renderer": "^19.1.0",
     "@typescript-eslint/eslint-plugin": "^8.50.0",
     "@typescript-eslint/parser": "^8.50.0",
@@ -122,7 +123,7 @@
     "jest-expo": "^54.0.16",
     "lucide-react-native": "^0.561.0",
     "prettier": "^3.7.4",
-    "react-test-renderer": "19.2.0",
+    "react-test-renderer": "19.1.0",
     "ts-jest": "^29.4.6",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.50.0"
