chore: exclude internal Python scripts from Snyk scanning
These scripts are internal development tools that:
- Don't run in production
- Have path traversal protection via validate_safe_path()
- Are already ignored in .snyk policy file

Excluding them from VS Code Snyk scanning to reduce false positives.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -62,7 +62,9 @@
       "**/*.spec.tsx",
       "**/node_modules/**",
       "**/dist/**",
-      "**/build/**"
+      "**/build/**",
+      "**/scripts/ux-research/**",
+      "**/packages/design-system/scripts/**"
     ]
   }
 }
