--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -55,6 +55,7 @@
     "axios": "^1.13.2",
     "expo": "~54.0.29",
     "expo-blur": "~15.0.8",
+    "expo-build-properties": "^1.0.10",
     "expo-constants": "~18.0.12",
     "expo-crypto": "~15.0.8",
     "expo-device": "~8.0.10",
