--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -93,6 +93,7 @@
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
     "react-native-web": "~0.21.2",
+    "react-native-webview": "^13.16.0",
     "tweetnacl": "^1.0.3",
     "tweetnacl-util": "^0.15.1",
     "zod": "^4.2.1",
