--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -39,6 +39,7 @@
     "@supabase/supabase-js": "^2.88.0",
     "@tanstack/react-query": "^5.90.12",
     "@tanstack/react-table": "^8.21.3",
+    "@upstash/redis": "^1.36.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
