--- a/package.json
+++ b/package.json
@@ -97,7 +97,8 @@
       "react-dom": "19.1.0",
       "react-test-renderer": "19.1.0",
       "fast-xml-parser": "^4.5.0",
-      "glob": "^9.0.0"
+      "glob": "^9.0.0",
+      "qs": ">=6.14.1"
     }
   },
   "dependencies": {
