chore: fix turbo test caching and jest vscode config
- Set cache: false for test tasks (tests should always run fresh)
- Configure Jest extension to use apps/mobile as root path
- Remove unnecessary test outputs config that caused warnings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -70,5 +70,10 @@
       "**/scripts/ux-research/**",
       "**/packages/design-system/scripts/**"
     ]
-  }
+  },
+
+  // Jest Configuration - run from apps/mobile for proper config
+  "jest.rootPath": "apps/mobile",
+  "jest.jestCommandLine": "npx jest",
+  "jest.autoRevealOutput": "on-exec-error"
 }
