--- a/apps/mobile/eas.json
+++ b/apps/mobile/eas.json
@@ -15,7 +15,8 @@
       },
       "env": {
         "APP_ENV": "development"
-      }
+      },
+      "channel": "development"
     },
     "preview": {
       "distribution": "internal",
