fix(eas): add .venv to easignore - was 2.4GB

--- a/.easignore
+++ b/.easignore
@@ -6,6 +6,13 @@
 # ═══════════════════════════════════════════════════════════════════
 
 # ═══════════════════════════════════════════════════════════════════
+# PYTHON VIRTUAL ENV - 2.4GB!!!
+# ═══════════════════════════════════════════════════════════════════
+.venv
+venv
+__pycache__
+
+# ═══════════════════════════════════════════════════════════════════
 # NODE MODULES - Biggest culprit (~2.2GB)
 # EAS installs fresh dependencies during build
 # ═══════════════════════════════════════════════════════════════════
