fix(eas): configure pnpm as package manager for EAS builds

--- a/apps/mobile/eas.json
+++ b/apps/mobile/eas.json
@@ -1,10 +1,16 @@
 {
   "cli": {
     "version": ">= 7.0.0",
-    "appVersionSource": "remote"
+    "appVersionSource": "remote",
+    "packageManager": "pnpm"
   },
   "build": {
+    "base": {
+      "node": "18.20.0",
+      "pnpm": "9.15.9"
+    },
     "development": {
+      "extends": "base",
       "developmentClient": true,
       "distribution": "internal",
       "ios": {
@@ -19,6 +25,7 @@
       "channel": "development"
     },
     "preview": {
+      "extends": "base",
       "distribution": "internal",
       "channel": "preview",
       "ios": {
@@ -32,6 +39,7 @@
       }
     },
     "production": {
+      "extends": "base",
       "channel": "production",
       "autoIncrement": true,
       "ios": {
