fix(eas): remove invalid packageManager from cli config

--- a/apps/mobile/eas.json
+++ b/apps/mobile/eas.json
@@ -1,8 +1,7 @@
 {
   "cli": {
     "version": ">= 7.0.0",
-    "appVersionSource": "remote",
-    "packageManager": "pnpm"
+    "appVersionSource": "remote"
   },
   "build": {
     "base": {
