fix(eas): remove package-lock.json to force pnpm detection

--- a/.gitignore
+++ b/.gitignore
@@ -114,3 +114,4 @@ apps/**/pnpm-lock.yaml
 
 # Snyk Security Extension - AI Rules (auto-generated)
 .github/instructions/snyk_rules.instructions.md
+package-lock.json
