--- a/app.json
+++ b/app.json
@@ -1,3 +1,9 @@
 {
-  "expo": {}
+  "expo": {
+    "extra": {
+      "eas": {
+        "projectId": "c32c75a1-9d03-4046-b66a-60865d00e4d5"
+      }
+    }
+  }
 }
