--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -52,6 +52,7 @@
     "@supabase/supabase-js": "^2.88.0",
     "@travelmatch/design-system": "workspace:*",
     "@travelmatch/shared": "workspace:*",
+    "@types/supercluster": "^7.1.3",
     "expo": "~54.0.29",
     "expo-blur": "~15.0.8",
     "expo-build-properties": "^1.0.10",
@@ -96,6 +97,7 @@
     "react-native-view-shot": "^4.0.3",
     "react-native-web": "~0.21.2",
     "react-native-webview": "^13.16.0",
+    "supercluster": "^8.0.1",
     "tweetnacl": "^1.0.3",
     "tweetnacl-util": "^0.15.1",
     "zod": "^4.2.1",
