--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -49,11 +49,17 @@
     "@rnmapbox/maps": "10.2.10",
     "@sentry/react-native": "~7.8.0",
     "@shopify/flash-list": "^2.2.0",
+    "@supabase/postgrest-js": "^2.89.0",
     "@supabase/supabase-js": "^2.88.0",
+    "@tanstack/query-async-storage-persister": "^5.90.18",
+    "@tanstack/react-query": "^5.90.12",
+    "@tanstack/react-query-persist-client": "^5.90.18",
     "@travelmatch/design-system": "workspace:*",
     "@travelmatch/shared": "workspace:*",
     "@types/supercluster": "^7.1.3",
+    "date-fns": "^4.1.0",
     "expo": "~54.0.29",
+    "expo-application": "^7.0.8",
     "expo-blur": "~15.0.8",
     "expo-build-properties": "^1.0.10",
     "expo-clipboard": "^8.0.8",
@@ -78,6 +84,7 @@
     "expo-splash-screen": "~31.0.12",
     "expo-status-bar": "~3.0.9",
     "expo-updates": "~29.0.15",
+    "expo-video-thumbnails": "^10.0.8",
     "i18next": "^25.7.3",
     "pako": "^2.1.0",
     "posthog-react-native": "^4.16.2",
@@ -107,6 +114,7 @@
   "devDependencies": {
     "@babel/plugin-transform-export-namespace-from": "^7.27.1",
     "@eslint/js": "^9.39.2",
+    "@storybook/react": "^8.6.15",
     "@storybook/react-native": "^10.1.1",
     "@testing-library/react-native": "14.0.0-alpha.1",
     "@types/jest": "^29.5.14",
