--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -29,9 +29,9 @@
     "build:ios": "eas build --platform ios",
     "build:android": "eas build --platform android",
     "build:all": "eas build --platform all",
-    "secrets:pull": "infisical export --env=dev --format=dotenv > .env",
-    "secrets:pull:prod": "infisical export --env=prod --format=dotenv > .env.production",
     "dev:secure": "infisical run --env=dev -- pnpm dev",
+    "ios:secure": "infisical run --env=dev -- expo run:ios",
+    "android:secure": "infisical run --env=dev -- expo run:android",
     "build:secure": "infisical run --env=prod -- pnpm build:all",
     "db:types": "cd ../.. && supabase gen types typescript --linked > apps/mobile/src/types/database.generated.ts",
     "db:types:local": "cd ../.. && supabase gen types typescript --local > apps/mobile/src/types/database.generated.ts"
@@ -94,6 +94,7 @@
     "react-i18next": "^16.5.0",
     "react-native": "0.81.5",
     "react-native-calendars": "^1.1313.0",
+    "react-native-compressor": "^1.14.0",
     "react-native-confetti-cannon": "^1.5.2",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-mmkv": "^4.1.0",
