refactor: remove search feature, fix navigation & PostGIS RPC
- Remove Search tab from MainTabNavigator (filter-based discovery only)
- Remove search button from DiscoverHeader
- Remove like/comment buttons and handlers completely
- Fix all 'Discover' -> 'Home' navigation references
- Add NavigatorScreenParams for nested navigation typing
- Add discover_nearby_moments PostGIS RPC migration
- Fix Mapbox PointAnnotation to use UserLocation component
- Add language persistence with AsyncStorage
- Fix BlurFilterModal props and counter_offer action type
- Update ProfileHeaderSection snapshots
- Clean up unused variables and styles
- Replace console.warn with logger in i18n config

--- a/app.json
+++ b/app.json
@@ -1,7 +1,5 @@
 {
-  "name": "TravelMatch",
-  "slug": "travelmatch",
   "ios": {
-    "bundleIdentifier": "com.travelmatch.mobile"
+    "bundleIdentifier": "com.anonymous.travelmatch-new"
   }
 }
