--- a/apps/mobile/package.json
+++ b/apps/mobile/package.json
@@ -5,11 +5,14 @@
   "main": "index.ts",
   "private": true,
   "scripts": {
-    "dev": "expo start",
-    "start": "expo start",
-    "android": "expo run:android",
-    "ios": "expo run:ios",
-    "web": "expo start --web",
+    "dev": "infisical run --env=dev -- pnpm exec expo start",
+    "start": "infisical run --env=dev -- pnpm exec expo start",
+    "android": "infisical run --env=dev -- pnpm exec expo run:android",
+    "ios": "infisical run --env=dev -- pnpm exec expo run:ios",
+    "web": "infisical run --env=dev -- pnpm exec expo start --web",
+    "dev:local": "expo start",
+    "ios:local": "expo run:ios",
+    "android:local": "expo run:android",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
@@ -20,19 +23,15 @@
     "format": "prettier --write \"src/**/*.{ts,tsx}\"",
     "format:check": "prettier --check \"src/**/*.{ts,tsx}\"",
     "type-check": "tsc --noEmit",
-    "sb:start": "sb-rn-get-stories && expo start",
+    "sb:start": "sb-rn-get-stories && pnpm exec expo start",
     "sb:generate": "sb-rn-get-stories",
     "check:nav": "ts-node scripts/check-navigation-sync.ts",
     "validate": "pnpm run type-check && pnpm run lint && pnpm run check:nav && pnpm run test:ci",
     "clean": "rm -rf node_modules .expo dist coverage",
-    "prebuild": "expo prebuild",
-    "build:ios": "eas build --platform ios",
-    "build:android": "eas build --platform android",
-    "build:all": "eas build --platform all",
-    "dev:secure": "infisical run --env=dev -- pnpm dev",
-    "ios:secure": "infisical run --env=dev -- expo run:ios",
-    "android:secure": "infisical run --env=dev -- expo run:android",
-    "build:secure": "infisical run --env=prod -- pnpm build:all",
+    "prebuild": "pnpm exec expo prebuild",
+    "build:ios": "infisical run --env=prod -- pnpm exec eas build --platform ios",
+    "build:android": "infisical run --env=prod -- pnpm exec eas build --platform android",
+    "build:all": "infisical run --env=prod -- pnpm exec eas build --platform all",
     "db:types": "cd ../.. && supabase gen types typescript --linked > apps/mobile/src/types/database.generated.ts",
     "db:types:local": "cd ../.. && supabase gen types typescript --local > apps/mobile/src/types/database.generated.ts"
   },
